fix(docker): Fix Docerfile. fix(test): Fix GC test and stack test

--- a/lab3/Dockerfile
+++ b/lab3/Dockerfile
@@ -1,13 +1,10 @@
 FROM ubuntu:latest
 
-RUN apk update && apk upgrade && apk add bash
-RUN apk --no-cache add lua5.3 lua5.3-dev luarocks5.3
+RUN apt-get update -y && apt-get upgrade -y
+RUN apt-get install -y lua5.3 lua5.3-dev luarocks
 
 COPY . .
 
 RUN luarocks install busted && luarocks install luassert
 
-CMD ["busted", "garbage_collector_test.lua"]
-CMD ["busted", "heap_test.lua"]
-CMD ["busted", "reference_types_test.lua"]
-CMD ["busted", "value_types_test.lua"]
+CMD ["busted", "lab3/"]
