--- a/.github/workflows/lab5-push-build.yaml
+++ b/.github/workflows/lab5-push-build.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: Push container
         run: docker push ghcr.io/aleksandrzhukovin/lab5
       - name: Run the container
-        run: docker run --memory 4g --name ghcr.io/aleksandrzhukovin/lab5_container ghcr.io/aleksandrzhukovin/lab5
+        run: docker run --memory 4g --name lab5_container ghcr.io/aleksandrzhukovin/lab5
